# TweetPilot

./: .gitignore  .gitmodules  CLAUDE.md  GSTACK_GUIDE.md  README.md  dev-with-log.sh  fix-all-colors.sh  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  retweet_elon_latest.py  start_ollama.sh  start_open_webui.sh  stop_local_ai.sh  tailwind.config.js  test_hello.py  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
docs/: 0.需求说明.md  3.Agent 产品方案.md  5.语义状态Agent设计哲学.md  6.平台架构与边界框架.md  account-table-split-refactor.md  ai-autonomous-workflow-design.md  ai-integration-implementation.md  ai-integration-plan.md  ai-scheduled-task-session-refactor-brief.md  ai-session-constraints-implementation.md  ai-task-system-prompt-account-parameter-investigation.md  ai-thinking-history-implementation-plan.md  ai-workspace-bound-session-db-redesign.md  backend-event-notification-system.md  claurst_analysis.md  custom-data-block-mvp-implementation-plan.md  data-blocks-refactor.md  data-blocks-remaining-work.md  data-blocks-unified-roadmap.md  global-blocking-overlay-design.md  (+21 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_tasks_tables.sql  002_create_accounts_table.sql  003_create_x_accounts_and_trend.sql  004_create_ai_conversation_tables.sql  005_create_ai_message_timeline_items.sql
src-tauri/src/: app_events.rs  claurst_session.rs  main.rs  task_ai_executor.rs  task_commands.rs  task_database.rs  task_executor.rs  task_module.rs  task_scheduler.rs
src-tauri/src-tauri/src-tauri/tests/: unified_timer_tests.rs
src-tauri/src-tauri/src/unified_timer/: tests.rs
src-tauri/src/commands/: account.rs  ai.rs  data_blocks.rs  mod.rs  preferences.rs  task.rs  workspace.rs
src-tauri/src/models/: mod.rs  twitter_account.rs
src-tauri/src/services/: ai_config.rs  ai_storage.rs  conversation_storage.rs  localbridge.rs  mod.rs  python_runner.rs  resource_installer.rs  session_constraints.rs  settings_store.rs  storage.rs  test_home_guard.rs
src-tauri/src/unified_timer/: event_loop.rs  executor.rs  mod.rs  registry.rs  types.rs  unmanaged_accounts.rs
src-tauri/src/unified_timer/executors/: account_sync.rs  localbridge_sync_executor.rs  mod.rs  python_script.rs  task_ai_session.rs
(+470 files in other folders)
