[package]
name = "tweetpilot"
version = "0.1.0"
description = "TweetPilot - AI-powered Twitter automation tool"
authors = ["TweetPilot Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
cron = "0.12"

# Claurst dependencies (as path dependencies)
claurst-core = { path = "claurst/src-rust/crates/core" }
claurst-api = { path = "claurst/src-rust/crates/api" }
claurst-query = { path = "claurst/src-rust/crates/query" }
claurst-tools = { path = "claurst/src-rust/crates/tools" }

# Additional dependencies for AI integration
tokio-util = "0.7"
parking_lot = "0.12"
log = "0.4"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
